<resources>
    <string name="app_name">Diablo Wiki</string>
    <string name="first_quote">\"Many moons have passed since I left the town of Tristram behind me.
        Since then I\'ve tried to forget the terrors I beheld beneath the cold earth, and the twisted nightmares that have haunted my every waking moment.
        There\’s something dark within me now; I can feel it, driving me towards the East, assuring me that my salvation lies within the ruins of ancient kingdoms.
        Though I know the way, I know not what perils will arise to hinder my journey, and as I pass through the first gate,
        I know that the better part of my soul will remain behind… forever.\" \n\n— The Dark Wanderer </string>
    <string name="warrior_tab1">
        Warriors are arguably the strongest character class in Diablo I.
        They can wield Swords, Axes or Maces, and swing them at fast speed with ease.
        These weapons are either one-handed or two-handed.
        Two-handed weapons are more useful in the beginning, but at later levels, players reach a Vitality cap which causes Life to increase at a relatively slower rate.
        In these later levels, the warrior has similar life to their earlier levels, but the monsters do much more damage.
        This necessitates the use of a Shield. Their amazing Strength allows them to equip even the heaviest of all Armor.

        \n\nTheir magical abilities are limited.
        With the lowest maximum Magic of 50 and less Mana per level than the other classes, they are forced to only use support spells like Stone Curse and Teleport.
        With their low mana, these support spells can be used only sparingly.
        Since their low level attack spells cannot effectively damage high-level monsters, attack spells like Firebolt and Charged Bolt are not an option.
        Advocates, which can teleport away from the player(s), and the Succubi, which upon close contact, flee at the exact same pace as the player character(s) walks,
        are for that very reason especially difficult. Following them might result in aggravating more enemies to attack the player(s).
        Although the modification which gives less Light Radius is intended to be a curse, it proves very beneficial to warriors nonetheless.
        If one chooses to go with a lower light radius, the Warrior will aggravate fewer monsters.
        </string>
    <string name="rogue_tab1">
        The Rogue\'s Strength and Magic attributes are intermediate between the Warrior and the Sorcerer,
        but with a Vitality being a bit lower than that of a Warrior and on par with a Sorcerer\'s,
        however her Dexterity is much higher than that of the aforementioned two classes.
        She is the only character class who can use Bows effectively,
        since the other two classes lack the dexterity needed for higher Bow Damage and To Hit percentage and are innately slow at firing Missiles.
        The quantity of Arrows is infinite which means that they will never take an end until the bow itself breaks down, unless it is an Indestructible one,
        and it is of great advantage for her, especially since she uses bows frequently, if she\'s not up for a Shield-and-Sword setup, that is.
        The Rogue\'s strength is mostly used for wearing heavy Plate Armor, since her damage comes as most from her Dexterity,
        nevertheless Strength combined with the formerly mentioned attribute from equipment gives her quite of an increase in damage.

        \n\nRogues are not as effective in team games, since allies can cause damage to one another even with Player Friendly set on. For example;
        if a Warrior is attacking, then the Rogue has to accurately target the monster to avoid hitting the Warrior.
        The only saving grace a Warrior has from accidental damage is his Shield; since there is not a hard cap on Blocking,
        if he were to have enough Dexterity he would be able to block the most of a Rogue\'s arrows, if not every arrow she fires as long as he is immobile.
        </string>
    <string name="sorcerer_tab1">
        Sorcerers are a playable class in Diablo I. They are the game\'s most effective spell casters.
        Since they have the highest maximum Magic out of all the character classes, they can effectively use the high-end spells.
        These high-end spells require more than just a level-one proficiency.
        With the sorcerer\'s naturally high Mana, the class can use spells repeatedly, and the class has the highest casting rate out of any other classes.
        </string>
    <string name="monk_tab1">
        The Monk is a powerful unarmed combatant. They are strong and dextrous.
        Monks have some skill with fighting with staves, and though it does less damage than their bare hands,
        staves enable them to execute a sweeping attack and block incoming blows.
        Likewise, heavy armor actually gives them less defense than lighter armor.
        Since they possess great natural damage already, they search out staves which will give them faster attack.
        Dexterity adds to their damage equally to strength, however Dexterity also increases their ability to block incoming attacks with their staves.
        Their high natural defense makes searching for high defense armor less of a necessity. They try to find armor that gives them effects instead.
        In unarmed combat they prefer to use their feet as weapons rather than their hands. Their kicks are very fast and do a lot of damage at high levels.

        \n\nThe Monk search skill is very useful. In Diablo I, items could not be highlighted on the ground with the magical spell search.
        This caused problems when trying to find rings, amulets or Elixirs on the ground, especially if they fell behind an object.
        This necessitated a tiring search by the player to find the tiny item on the ground.
        The Search spell highlighted not only the item on the ground, but also all items that had fallen on the map.
        Other classes could learn Search as a spell.
        </string>
    <string name="barbarian_tab1">
        The Hellfire Barbarian can only be played after editing the Command.txt file in the Hellfire folder, and only in the 1.01 patch.
        He is similar to the Warrior class and uses the same graphics, but he has unequaled prowess in melee combat, even when reduced to the same tactics as the Warrior,
        at the costs of no innate magic power and reduced chance to-hit.
        </string>
    <string name="bard_tab1">
        The Bard is one of the two unfinished classes in Diablo: Hellfire, the other being the Barbarian.
        She could only be played after editing the Command.txt file in the Hellfire folder.

        \n\nThe Bard uses the Rogue\'s graphic, but can dual-wield weapons in lieu of a shield.
        Bards possess balanced attributes, so they excel at nothing.
        Possessing medium amounts of the three core attributes of Dexterity, Strength and Magic,
        while enough to make them able to at least make use of everything in the game, for the purposes of specialization, makes them weak at all of them.
        High dexterity, while helpful when using bows, works better when the bard makes use of at least one sword.

        \n\nBards have the ability to wield two one-handed weapons. This combination of two one-handed swords is not as powerful as it seems.
        It can be as damaging as a Great Axe at best. But there are benefits to this style for her.
        To name one, there is the potential for an additional two magical modifications on the second weapon, which allows for deadly combos.
        Equipping a Civerb\'s Cudgel along with a good sword (preferably of Speed or Haste)
        will make the Bard a very powerful Melee character since the +200% damage bonus on Civerb\'s Cudgel applies to the whole damage and not just weapon damage.
        On the other hand, a Bard could sacrifice stopping power for a good weapon with life steal, and it would be near impossible to end her reign, unless stunlock is involved.

        \n\nAnother benefit is that when a Bard dual wields, she possesses the same ability to attack enemies adjacent to her target that the Monk has with his staff.
        This, when combined with potent equipment, allows the Bard to carve a path of destruction with relative ease,
        much in the same way that the Barbarian would with his trusty axe.

        \n\nA fatal flaw in this character\'s design is that she has the melee attack speed of the Rogue.
        Rogues were never intended to be melee attackers, so they were given a slower melee attack speed than the warrior.
        The only saving grace of the bard\'s melee ability is her high dexterity; having a higher degree of dexterity,
        as well as being able to equip a second weapon for extra to-hit makes the bard more suited for Civerb\'s Cudgel than the Warrior or Barbarian, who firstly,
        needed to get the extra To-Hit from jewelry when wielding it, and secondly, had to make the hits count, as they swung at their normal attacking speed,
        robbing them of being able to stunlock some monsters. By hitting the enemy more frequently, she has the potential to stun lock her enemy.

        \n\nBecause her magical ability is only second to the sorcerer, a Bard can effectively use the attacking magical spells of Chain Lightning and Fireball,
        and some may even find worth in choosing to invoke the protection of Mana Shield. This helps to made the Bard effective in combat, both as a spellcaster,
        and as a melee hero who can quickly restore damage taken with her equipment and the art of healing.

        \n\nHowever, the saying \'jack of all trades, masters of none\' certainly applies to a Bard: a Warrior, Monk, or Barbarian will always outdamage her in melee combat,
        the Rogue bests her in ranged combat, and the Sorcerer is more powerful in spell combat.
        Their strength lies in their ability to adapt: if a Bard cannot adapt, death and/or failure is more likely.
        </string>
    <string name="nav_about_game">About the game</string>
    <string name="nav_lore">Lore</string>
    <string name="nav_characters">Characters</string>
    <string name="nav_items">Items</string>
    <string name="nav_talents">Talents</string>
    <string name="header_warrior_tab1">Warrior</string>
    <string name="header_rogue_tab1">Rogue</string>
    <string name="header_sorcerer_tab1">Sorcerer</string>
    <string name="header_monk_tab1">Monk</string>
    <string name="header_barbarian_tab1">Barbarian</string>
    <string name="header_bard_tab1">Bard</string>
    <string name="button_warrior">Warrior</string>
    <string name="button_bard">Bard</string>
    <string name="button_barbarian">Barbarian</string>
    <string name="button_monk">Monk</string>
    <string name="button_sorcerer">Sorcerer</string>
    <string name="button_rogue">Rogue</string>
    <string name="button_tab1">tab1</string>
    <string name="contentDescription_diablo_1_warrior">Diablo 1 Warrior content description</string>
    <string name="contentDescription_diablo_1_rogue">Diablo 1 Rogue content description</string>
    <string name="contentDescription_diablo_1_monk">Diablo 1 Monk content description</string>
    <string name="contentDescription_diablo_1_monk_attributes">Diablo 1 Monk content description</string>
    <string name="weapon_name">Weapon Name</string>
    <string name="weapon_damage">Damage</string>
    <string name="weapon_durability">Durability</string>
    <string name="weapon_requirements">Requirements</string>
    <string name="weapon_price">Price</string>
    <string name="weapon_quality">Quality Level</string>
</resources>